# Lecture3Group

./: README.md
src/: CMakeLists.txt  exercise-3.1.c  exercise-3.2.c  exercise-3.3.c  exercise-PSPDC-204-2.c  exercise-PSPDC-205-1.c  exercise-PSPDC-242-P1.c  exercise-PSPDC-242-P2.c  exercise-PSPDC-242-SC1.c
